[package]
name = "rmercury"
version = "0.0.1"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

[dev-dependencies.sdl2]
version = "0.33.0"
features = ["bundled"]

[[example]]
name = "pong"

[[example]]
name = "pong_spectator"

[[example]]
name = "pong_sync_test"

[[example]]
name = "pong_replay"

[[example]]
name = "pong_packet_loss"